changed probsoln import to use texparserlib